--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/index.js",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node -r tsconfig-paths/register src/index.ts"
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules -- ./src/index.ts"
+
   },
   "keywords": [],
   "author": "",
