--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules -- ./src/index.ts"
-
   },
   "keywords": [],
   "author": "",
@@ -33,6 +32,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "tsconfig-paths": "^4.2.0",
+    "uuid": "^13.0.0",
     "zod": "^4.1.5"
   }
 }
